1.8.3 => 1.8.5
=================
New features
    New before answering and after completion events synchronize track fields with code the same as answer codes
Interface improvements:
    Added token states incomplete and partially answered
    Answers of partially answered tokens can be seen
    Token status is shown in show token screen

1.8.2 => 1.8.3
=================
Automatic mail
    Email can now also be sent x days before survey expiry

1.8.1 => 1.8.2
=================
New features:
    You can change the organization(s) a patient belongs to (and move his/her tracks)
    Correct token button added to menu
    Memo field type for tracks
    (Re)import imported files
Automatic mail
    Preview option for automatic mailjobs
    Automatic mailjobs can now filter for relations, check your jobs!
    Automatic mail execution can be logged to file when set in the project.ini
Interface improvements:
    When a token is corrected links are visible when seeing the token to open the original / copy
    Improved interface for communication templates and automatic mail
    The Contact => Bugs and GemsTracker pages have been refreshed with a default bugs url (use Roles to make invisible)
    Editing staff and organizations uses extra defaults for smoother creation
    Different respondent search, edit and show screens can be set for a user group
    Different respondent edit and show screens can be set for each organization, overruling user group settings
    Different token ask screens can be set for each organization
Export improvements:
    Answers from inactive patients can now be exported
    Depending on rights patient numbers, patient gender and birth year and month can be exported with answers
Rights:
    The types of staff that a user can create/edit are determined at the group level
    A default group for new users can be set at the user group level